# GLSL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  camera.h  cmake_install.cmake  default.frag  fragment.glsl  main.cpp  shader.h  stb_image.h  test.cpp  test.h  vertex.glsl
assets/textures/: test.txt
assets/textures/newhouse/: farmhouse_obj.mtl
shader/: campfire.frag  campfire.vert  default.frag  particle.frag  particle.vert  reflect.frag  refrac.frag  refrac.vert  skybox.frag  skybox.vert
src/: Camera.cpp  Campfire.cpp  Campfire.h  Collider.cpp  Collider.h  Cubemaps.cpp  Cubemaps.h  Cubmaps.cpp  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Texture.cpp  Texture.h  VAO.cpp  VBO.h  model.cpp  model.h  tree_collider_utils.h
